[package]
name = "proxy"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.2"
tokio = { version = "0.2.22", features = ["macros"] }
futures = "0.1.29"
base64 = "0.12.3"
