[package]
name = "proxy"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["macros"] }
futures = "0.3.5"
base64 = "0.12.3"
tungstenite = "0.11.1"
log = "0.4.11"
simple-logging = "2.0.2"
