[package]
name = "proxy"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["macros", "time"] }
futures = "0.3.5"
base64 = "0.12.3"
async-tungstenite = { version = "0.8.0", features = ["async-tls", "async-std-runtime"]}
log = "0.4.11"
simple-logging = "2.0.2"
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1.0"
actix-web-actors = "2.0"
actix = "0.9"
openssl = "0.10.30"
rustls = "0.16.0"
chrono = "0.4.13"
reqwest = "0.10.7"
http = "0.2.1"
once_cell ="1.4.0"
